--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ button {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+img {
+    max-width: 20%;
+    height: auto;
+}
+
 #resultsTable {/*applies to th, td, table*/
     margin-left: auto;
     margin-right: auto;
